# Nova-RAG

./: .cursorrules  .gitignore  .opencode  AGENTS.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  .gitignore  go.mod  go.sum  lumina.db  pip.ini  pyproject.toml  test_ocr_quick.py
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/handler/: chat.go  chat_handler.go  docs.go  system_handler.go
backend/internal/model/: document.go
backend/internal/repository/: docs.go
backend/internal/service/: chat.go  docs.go
backend/internal/storage/: database.go
backend/scripts/: test_e2e.py
backend/src/api/: components.py  database.py  models.py  server.py
backend/src/api/routes/: __init__.py  chat.py  citations.py  conversations.py  docs.py
backend/src/core/: config.py
backend/src/core/chunker/: base.py  csv_parser.py  docx_parser.py  excel_parser.py  md_splitter.py  parent_child.py  pdf_parser.py  ppt_parser.py
backend/src/core/embedder/: aliyun_embedder.py  base.py
backend/src/core/llm/: minimax.py
backend/src/core/ocr/: __init__.py
backend/src/core/retriever/: aliyun_reranker.py  base.py  bm25_index.py  chroma.py  compressor.py  evaluator.py  hybrid_search.py  query_rewriter.py  reranker.py  self_query.py
backend/src/core/storage/: vector_store.py
backend/src/model/: document.py
backend/tests/: test_chunker.py
docs/: ENTERPRISE_TEST_REPORT.md  PRECISION_CITATION_PLAN.md  PROJECT_EVALUATION.md  RAG_EVALUATION_REPORT.md  v1.0_POST_MORTEM.md  v2.0_ROADMAP.md
(+81 files in other folders)
